# upfree

./: .env  .gitignore  app.py  askupload.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  secrets.toml  upfree.wsgi
.streamlit/: secrets.toml
upfree/: test_copy.py  upfree.py
