[tool.poetry]
name = "upfree"
version = "0.1.0"
description = ""
authors = ["ThomasB91 <116346781+ThomasB91@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
st-weaviate-connection = {git = "https://github.com/weaviate/st-weaviate-connection.git"}
pip = "^24.0"
install = "^1.3.5"
python-dotenv = "^1.0.1"
openai = "1.28.1"
instructor = "^1.2.4"
rpds-py = "0.18.1"
referencing = "0.35.1"
cryptography = "42.0.7"
jinja2 = "3.1.4"
jsonschema = "4.22.0"
pydantic-core = "2.18.2"
pygments = "2.18.0"
blinker = "1.8.2"
pyarrow = "16.1.0"
pydantic = "2.7.1"
pydeck = "0.9.1"
tenacity = "8.3.0"
tqdm = "4.66.4"
validators = "0.28.1"
streamlit = "1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
